welcome.lessons.welcome.array.search.IndexOfMaxValue.scala.error
indexOfMaxValue:10: error: not found: value incide
  return incide
         ^